# framework

./: .clang-format  .cmake-format.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG  CHANGELOG_OLD  CITATION.cff  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md  TODO.md  clean-state.sh  pull-submodules.py  renamed.classes
example/: CMakeLists.txt  Makefile  README  electronicsSimu.rml  g4Analysis.rml  generateGasFile.rml  generateReadoutFile.rml  multiCoboAnalysis.rml  multiFeminos.rml  restLauncher.cc  saveMetadataFile.rml  saveReadoutMetadata.rml  signalAnalysisLite.rml  simDataAnalysis.rml
example/cmake/: FindGarfield.cmake  FindREST.cmake
example/config/: managers.rml  myMetadata.rml  processes.rml
example/inc/: myManager.h  myMetadata.h  myProcess.h  mySignalProcess.h  myTrackAnalysisProcess.h
example/restG4/: restG4.rml
example/restG4/geometry/: materials.xml
example/restManager/: generateReadoutFile.rml  multiCoboAnalysis.rml  plots.rml  readouts.rml  restG4.rml
example/src/: myManager.cxx  myMetadata.cxx  myProcess.cxx  mySignalProcess.cxx  myTrackAnalysisProcess.cxx
example/userRESTLibrary/: README.md
libraries/: CMakeLists.txt
libraries/detector/: CMakeLists.txt  README.md
libraries/detector/example/: saveMetadataFile.rml
libraries/detector/examples/: readouts.rml
libraries/detector/inc/: TRestAvalancheProcess.h  TRestElectronDiffusionProcess.h  TRestFiducializationProcess.h  TRestHitsAnalysisProcess.h  TRestHitsShuffleProcess.h  TRestHitsToSignalProcess.h  TRestSignalChannelActivityProcess.h  TRestSignalEvent.h  TRestTriggerAnalysisProcess.h
libraries/detector/macros/: REST_DrawCombinedGasCurves.C  REST_ViewReadoutEvent.C
libraries/detector/src/: TRestAvalancheProcess.cxx  TRestElectronDiffusionProcess.cxx  TRestFiducializationProcess.cxx  TRestHitsAnalysisProcess.cxx  TRestHitsEvent.cxx  TRestHitsReductionProcess.cxx  TRestHitsRotateAndTraslateProcess.cxx  TRestHitsToSignalProcess.cxx  TRestPointLikeAnaProcess.cxx  TRestReadoutAnalysisProcess.cxx  TRestSignalDeconvolutionProcess.cxx  TRestSignalToHitsProcess.cxx  TRestSmearingProcess.cxx
libraries/dummy/: CMakeLists.txt  README.md
libraries/dummy/example/: README.md
libraries/dummy/inc/: TRestDummyAnalysisProcess.h  TRestDummyEvent.h  TRestDummyMetadata.h  TRestDummyNameProcess.h  TRestDummyToDetectorHitsProcess.h
libraries/dummy/src/: .TRestDummyNameProcess.cxx.swp  TRestDummyAnalysisProcess.cxx  TRestDummyEvent.cxx  TRestDummyMetadata.cxx  TRestDummyNameProcess.cxx  TRestDummyToDetectorHitsProcess.cxx
libraries/garfield/: CMakeLists.txt  TRestGarfieldDriftProcess.cxx  TRestGeometry.h
libraries/geant4/: CMakeLists.txt  README.md
libraries/geant4/cmake/: MacroRootDict.cmake
libraries/geant4/inc/: TRestBiasingVolume.h  TRestG4Event.h  TRestG4Metadata.h  TRestG4PhysicsLists.h  TRestG4PrimaryGenerator.h  TRestG4Track.h  TRestG4toHitsProcess.h  TRestGeant4AnalysisProcess.h  TRestGeant4BlobAnalysisProcess.h  TRestGeant4Hits.h
libraries/geant4/macros/: REST_FindIsotopes.C  REST_Geant4_GetROIEvents.C  REST_Geant4_MeanTrackLeng.C  REST_Geant4_QuickLookAnalysis.C  REST_Geant4_ReadNEvents.C  REST_Geant4_ReadNEvents_inROI.C  REST_Geant4_ViewGeometry.C  REST_GetBiasingError.C  REST_GetROIEvents_Fiducial.C  REST_ViewG4Event.C
libraries/geant4/src/: TRestG4Event.cxx  TRestG4EventViewer.cxx  TRestG4Hits.cxx  TRestG4Metadata.cxx  TRestG4PhysicsLists.cxx  TRestG4PrimaryGenerator.cxx  TRestG4Track.cxx  TRestG4toHitsProcess.cxx  TRestGeant4AnalysisProcess.cxx  TRestGeant4BlobAnalysisProcess.cxx  TRestGeant4EventViewer.cxx  TRestGeant4Metadata.cxx  TRestPhysicsLists.cxx
libraries/grafield/: TRestGeometry.cxx
libraries/muon/: CMakeLists.txt  TRest2DHitsEvent.cxx  TRest2DHitsEvent.h  TRestSignalTo2DHitsProcess.h
libraries/muon/example/: muonAnalysis.rml
libraries/raw/: CMakeLists.txt  README.md
libraries/raw/examples/: multiCoboAnalysis.rml  multiFeminos.rml
libraries/raw/inc/: TRestCoBoAsAdToSignalProcess.h  TRestFindResponseSignalProcess.h  TRestMultiCoBoAsAdToSignalProcess.h  TRestRawSignal.h  TRestRawSignalToSignalProcess.h  TRestRawSignalViewerProcess.h  TRestRawToSignalProcess.h  TRestSharedMemoryBufferToRawSignalProcess.h  TRestSignalZeroSuppresionProcess.h  mygblink.h
libraries/raw/macros/: REST_ProduceReponseSignal.C
libraries/raw/src/: TRestCoBoAsAdToSignalProcess.cxx  TRestDAQMetadata.cxx  TRestMultiCoBoAsAdToSignalProcess.cxx  TRestRawSignalAnalysisProcess.cxx  TRestRawToSignalProcess.cxx  TRestSignalToRawSignalProcess.cxx  TRestSignalZeroSuppresionProcess.cxx  TRestUSTCElectronicsProcess.cxx
libraries/restDataBaseImpl/: CMakeLists.txt
libraries/restDataBaseImpl/pgsql/: setup.sql
libraries/restDataBaseImpl/source/: TRestDataBaseImpl.cc  TRestDataBaseImpl.hh  pg.hh
libraries/restDataBasePsql/: CMakeLists.txt
libraries/restDataBasePsql/source/: TRestDataBaseImpl.cc  TRestDataBaseImpl.hh  pg-impl.hh
libraries/restDecay0/: CMakeLists.txt  TRestGeneratorInfoDecay0.cc  TRestGeneratorInfoDecay0.hh  TRestParticleCollectionDecay0.hh
libraries/restG4/: CMakeLists.txt  README.md  restG4.cc
libraries/restG4/include/: PhysicsList.hh  SteppingAction.hh
libraries/restG4/mac/: vis.mac
libraries/restG4/src/: EventAction.cc  (+4 more)
libraries/restPsql/: CMakeLists.txt  README.md
libraries/track/: CMakeLists.txt  README.md
source/: .Makefile.ExtLib  .Makefile.External  .Makefile.Lib  .Makefile.REST  .Makefile.arch  CMakeLists.txt  Makefile
source/events/: CMakeLists.txt  Makefile
source/framework/: CMakeLists.txt
source/metadata/: CMakeLists.txt  Makefile
source/processes/: CMakeLists.txt  Makefile
source/restcore/: CMakeLists.txt  Makefile
source/templates/: TRestTemplate.cxx  TRestTemplate.h  TRestTemplateEvent.cxx  TRestTemplateEvent.h  TRestTemplateEventProcess.cxx  TRestTemplateEventProcess.h  TRestTemplateMetadata.cxx  TRestTemplateMetadata.h  TRestTemplateRun.cxx  TRestTemplateRun.h
source/tools/: CMakeLists.txt  Makefile
source/utils/: CMakeLists.txt
source/viewers/: CMakeLists.txt  Makefile
(+1673 files in other folders)
